objects/Regional_Leave_Limit__c.object
<CustomObject>
    <label>Regional Leave Limit</label>
    <nameField>
        <label>Regional Leave Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regional Leave limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Leave__c</fullName>
        <label>Long Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <label>Restricted Holiday</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Leave__c</fullName>
        <label>Sick Leave</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Of_Pay__c</fullName>
        <label>Loss Of Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Probationer</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Trainee (Freshers Only)</fullName>
                </value>
                <value>
                    <fullName>Partner Resource</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Trainee(0-1 years)</fullName>
                </value>
                <value>
                    <fullName>FTE(1+ - 10 years)</fullName>
                </value>
                <value>
                    <fullName>Senior Employee(10+ years)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Privilege__c</fullName>
        <label>Paid/Privilege</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maternity_Leave__c</fullName>
        <label>Maternity Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paternity_Leave__c</fullName>
        <label>Paternity Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>